Update and rename prodigy.html to stopwatch.html

--- a/project2/stopwatch.html
+++ b/project2/stopwatch.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image" href="icon.png">
 
     <!-- for adding the stylesheet -->
-    <link rel="stylesheet" href="prodigy.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Container which contains the stopwatch -->
@@ -42,6 +42,7 @@
         </div>
     </div>
     <!-- for adding JavaScript to run the Stopwatch-->
-    <script src="prodigy.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
